--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "boxicons": "^2.1.4",
+    "formik": "^2.2.9",
+    "khalti-checkout-web": "^2.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
